force-app/main/default/objects/dsalesEncuestaPISyS__c/dsalesEncuestaPISyS__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los registros de las encuestas para el servicio de Instalaciones en PISyS</description>
    <label>Encuesta PISyS</label>
    <nameField>
        <label>Nombre de Encuesta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encuestas PISyS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>