force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesCliente__c.field-meta.xml
<CustomField>
    <fullName>dsalesCliente__c</fullName>
    <description>Campo que muestra el nombre del cliente relacionado a la encuesta</description>
    <formula>dsalesCotizacion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>