force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesCotizacion__c.field-meta.xml
<CustomField>
    <fullName>dsalesCotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que muestra la cotización relacionada a la encuesta</description>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Encuestas PISyS</relationshipLabel>
    <relationshipName>Encuestas_PISyS</relationshipName>
    <type>Lookup</type>
</CustomField>