force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesCuestionario__c.field-meta.xml
<CustomField>
    <fullName>dsalesCuestionario__c</fullName>
    <label>Cuestionario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>