force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesPregunta10__c.field-meta.xml
<CustomField>
    <fullName>dsalesPregunta10__c</fullName>
    <description>Campo correspondiente a la pregunta ¿Cuenta con regulador para gas?</description>
    <label>Pregunta 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>