force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesPregunta11__c.field-meta.xml
<CustomField>
    <fullName>dsalesPregunta11__c</fullName>
    <description>Campo correspondiente a la pregunta ¿El tipo de gas de su casa coincide con el
requerido por su nuevo equipo (LP o Natural) ?</description>
    <label>Pregunta 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>