force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesPregunta12__c.field-meta.xml
<CustomField>
    <fullName>dsalesPregunta12__c</fullName>
    <description>Campo que corresponde a la pregunta ¿Cuenta con un artículo similar instalado
en el lugar donde colocará su nuevo producto?</description>
    <label>Pregunta 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>