force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesRespuestaPregunta10__c.field-meta.xml
<CustomField>
    <fullName>dsalesRespuestaPregunta10__c</fullName>
    <label>Respuesta Pregunta 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>