force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesRespuestas__c.field-meta.xml
<CustomField>
    <fullName>dsalesRespuestas__c</fullName>
    <label>Respuestas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>