force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesTelefono__c.field-meta.xml
<CustomField>
    <fullName>dsalesTelefono__c</fullName>
    <description>Campo que muestra el teléfono relacionado al cliente</description>
    <formula>dsalesCotizacion__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono</label>
    <type>Text</type>
</CustomField>