force-app/main/default/objects/dsalesEncuestaPISyS__c/fields/dsalesTipoInstalacion__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoInstalacion__c</fullName>
    <description>Campo que muestra la lista de los tipos de instalación</description>
    <label>Tipo de Instalación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calentadores de agua</fullName>
            </value>
            <value>
                <fullName>Estufa</fullName>
            </value>
            <value>
                <fullName>Minisplit</fullName>
            </value>
            <value>
                <fullName>Secadoras &amp; centros de lavado</fullName>
            </value>
            <value>
                <fullName>Soporte TV</fullName>
            </value>
            <value>
                <fullName>Ventiladores Techo/Pared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>