force-app/main/default/objects/dsalesEncuestaPISyS__c/recordTypes/dsalesCuestionario.recordType-meta.xml
<RecordType>
    <fullName>dsalesCuestionario</fullName>
    <active>true</active>
    <label>Cuestionario</label>
</RecordType>