force-app/main/default/objects/dsalesEncuestaPISyS__c/recordTypes/dsalesEncuestaInstalaciones.recordType-meta.xml
<RecordType>
    <fullName>dsalesEncuestaInstalaciones</fullName>
    <active>true</active>
    <description>Tipo de registro para la encuesta de Instalaciones de PISyS</description>
    <label>Encuesta Instalaciones</label>
</RecordType>