force-app/main/default/objects/dsalesEncuestaPISyS__c/recordTypes/dsalesRespuestas.recordType-meta.xml
<RecordType>
    <fullName>dsalesRespuestas</fullName>
    <active>true</active>
    <label>Respuestas</label>
</RecordType>