force-app/main/default/objects/dsalesEncuestaPISyS__c/listViews/dsalesEncuestasActivas.listView-meta.xml
<ListView>
    <fullName>dsalesEncuestasActivas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>dsalesEncuestaPISyS__c.dsalesCuestionario</value>
    </filters>
    <filters>
        <field>dsalesIsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Encuestas Activas</label>
</ListView>