force-app/main/default/objects/dsalesEncuestaPISyS__c/listViews/Respuestas_de_clientes.listView-meta.xml
<ListView>
    <fullName>Respuestas_de_clientes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>dsalesEncuestaPISyS__c.dsalesRespuestas</value>
    </filters>
    <label>Respuestas de clientes</label>
</ListView>